--- a/scss/style.css
+++ b/scss/style.css
@@ -450,6 +450,22 @@ footer {
     font-size: 1.2rem;
   }
 }
+@media (max-width: 43.5rem) {
+  .availability,
+.part-time,
+.preferred-environment,
+.preferred-skills {
+    font-size: small;
+  }
+  .job-type,
+.job-environment {
+    flex-direction: column;
+  }
+  .card-text {
+    align-self: center;
+    margin-left: 0;
+  }
+}
 @media (max-width: 73.68rem) {
   .employment,
 .experience,
