--- a/scss/style.scss
+++ b/scss/style.scss
@@ -451,6 +451,27 @@ footer{
 
 }
 
+@media (max-width:43.5rem){ 
+    .availability,
+    .part-time,
+    .preferred-environment,
+    .preferred-skills{
+    font-size: small;
+}
+
+.job-type,
+.job-environment{
+    flex-direction: column;
+}
+
+.card-text{
+    align-self: center;
+    margin-left: 0;
+}
+
+
+}
+
 @media(max-width:73.68rem){
 
     .employment,
